--- a/DOM-projects/03-DigitalClock/index.html
+++ b/DOM-projects/03-DigitalClock/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../styles.css" />
     <title>Your Local Time</title>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
       body {
         background-color: #212121;
         color: #fff;
@@ -17,6 +18,14 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+      }
+      #banner {
+        color: #daf6ff;
+        font-family: 'Orbitron', sans-serif;
+        font-size: 30px;
+        text-align: center;
+        text-shadow: 0 0 20px rgba(10, 175, 230, 1),
+          0 0 20px rgba(10, 175, 230, 1);
       }
       #clock {
         font-size: 40px;
@@ -29,7 +38,7 @@
   </head>
   <body>
     <nav>
-      <a href="/" aria-current="page">Home</a>
+      <a href="../index.html" aria-current="page">Home</a>
       <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
         >Youtube channel</a
       >
