--- a/DOM-projects/index.html
+++ b/DOM-projects/index.html
@@ -10,62 +10,92 @@
   </head>
   <body style="background-color: #212121; color: #fff">
     <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
-        >Youtube channel</a
-      >
+      <a href=".." aria-current="page">Home</a>
+      <a target="_blank" href="https://www.youtube.com/@chaiaurcode">Youtube channel</a>
     </nav>
     <main>
       <h1>Chai aur code</h1>
+      <p class="stats">Projects: 16 — Completed: <strong>2</strong></p>
       <div class="projects">
-        <a class="project-link" style="" href="./1-colorChanger/index.html"
-          >Project 1 - color Changer 🔥</a
-        >
-        <a class="project-link" href="./2-BMICalculator/index.html"
-          >Project 2 - BMI Generator ☕️</a
-        >
-        <a class="project-link" href="./3-DigitalClock/index.html"
-          >Project 3 - Digital clock 😎</a
-        >
-        <a class="project-link" href="./4-GuessTheNumber/index.html"
-          >Project 4 - Guess the number 🤨</a
-        >
-        <a class="project-link" href="./5-keyboard/index.html"
-          >Project 5 - Keyboard check 👻</a
-        >
-        <a class="project-link" href="./6-unlimitedColors/index.html"
-          >Project 6 - Unlimited Colors 🧠
-        </a>
-        <a class="project-link" href="./7-scroll/index.html"
-          >Project 7 - Scroll like NextJS 👀</a
-        >
-        <a class="project-link" href="./8-typer/index.html"
-          >Project 8 - Your typer library 📚
-        </a>
-        <a class="project-link" href="./9-mouseCircle/index.html"
-          >Project 9 - Mouse Circle 📚
-        </a>
-        <a class="project-link" href="./10-emoji/index.html"
-          >Project 10 - Emoji 🫥
-        </a>
-        <a class="project-link" href="./11-textEditor/index.html"
-          >Project 11 - Text Editor ✍️
-        </a>
-        <a class="project-link" href="./12-randomImage/index.html"
-          >Project 12 - Random Image 🌠
-        </a>
-        <a class="project-link" href="./13-jokes/index.html"
-          >Project 13 - Jokes 😂
-        </a>
-        <a class="project-link" href="./14-cats/index.html"
-          >Project 14 - cats 🐈
-        </a>
-        <a class="project-link" href="./15-crudDom/index.html"
-          >Project 15 - DOM Crud 📌
-        </a>
-        <a class="project-link" href="./16-debounce/index.html"
-          >Project 16 - Debouncing 🏀
-        </a>
+        <div class="project-item">
+          <a class="project-link" href="./01-colorChanger/index.html">Project 1 - color Changer 🔥</a>
+          <span class="badge completed">Completed</span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./02-BMICalculator/index.html">Project 2 - BMI Generator ☕️</a>
+          <span class="badge completed">Completed</span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./03-DigitalClock/index.html">Project 3 - Digital clock 😎</a>
+          <span class="badge completed">Completed</span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./04-GuessTheNumber/index.html">Project 4 - Guess the number 🤨</a>
+          <span class="badge completed">Completed</span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./05-keyboard/index.html">Project 5 - Keyboard check 👻</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./06-unlimitedColors/index.html">Project 6 - Unlimited Colors 🧠</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./07-scroll/index.html">Project 7 - Scroll like NextJS 👀</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./08-typer/index.html">Project 8 - Your typer library 📚</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./09-mouseCircle/index.html">Project 9 - Mouse Circle 📚</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./10-emoji/index.html">Project 10 - Emoji 🫥</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./11-textEditor/index.html">Project 11 - Text Editor ✍️</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./12-randomImage/index.html">Project 12 - Random Image 🌠</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./13-jokes/index.html">Project 13 - Jokes 😂</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./14-cats/index.html">Project 14 - cats 🐈</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./15-crudDom/index.html">Project 15 - DOM Crud 📌</a>
+          <span class="badge pending">Pending </span>
+        </div>
+
+        <div class="project-item">
+          <a class="project-link" href="./16-debounce/index.html">Project 16 - Debouncing 🏀</a>
+          <span class="badge pending">Pending </span>
+        </div>
       </div>
     </main>
   </body>
