feat: complete BookList JS (add/edit/delete, localStorage persistence)

--- a/DOM-projects/15-crudDom/index.html
+++ b/DOM-projects/15-crudDom/index.html
@@ -29,6 +29,7 @@
           <div>Title</div>
           <div>Author</div>
           <div>Year</div>
+          <div>Actions</div>
         </section>
 
         <section id="book-list"></section>
