--- a/DOM-projects/index.html
+++ b/DOM-projects/index.html
@@ -89,7 +89,7 @@
 
         <div class="project-item">
           <a class="project-link" href="./15-crudDom/index.html">Project 15 - DOM Crud 📌</a>
-          <span class="badge pending">Pending </span>
+         <span class="badge completed">Completed</span>
         </div>
 
         <div class="project-item">
