feat: implement event delegation for image removal in gallery

--- a/Day33_Events/one.html
+++ b/Day33_Events/one.html
@@ -93,18 +93,20 @@
     //     console.log("google clicked");
     // }, false)
 
+    // Event Delegation
+    document.querySelector('#images').addEventListener('click', function (e) {
+        console.log(e.target.parentNode);
+            let removeIt = e.target.parentNode;
+            // removeIt.remove();
+            //removeIt.parentNode.removeChild(removeIt)  // alternative way to remove the element
 
-    // document.querySelector('#images').addEventListener('click', function (e) {
-    //     console.log(e.target.tagName);
-    //     if (e.target.tagName === 'IMG') {
-    //         console.log(e.target.id);
-    //         let removeIt = e.target.parentNode
-    //         removeIt.remove()
-    //     }
+            console.log(e.target.tagName);
+            let removeChild = e.target.tagName;
+            if (removeChild === 'IMG') {
+                removeIt.remove();
+            }
+    });
 
-    // })
-
-    //removeIt.parentNode.removeChild(removeIt)
 </script>
 
 </html>
