Completed two new projects: 1. [06-unlimitedColors] - Unlimited background-color changer using setInterval() and clearInterval().    - Added Start and Stop buttons with event listeners.
2. [05-keyboards] - KeyCode display project using keydown event.
   - Shows e.key, e.code, and e.keyCode through innerHTML when any key is pressed.

--- a/DOM-projects/index.html
+++ b/DOM-projects/index.html
@@ -39,12 +39,12 @@
 
         <div class="project-item">
           <a class="project-link" href="./05-keyboard/index.html">Project 5 - Keyboard check 👻</a>
-          <span class="badge pending">Pending </span>
+          <span class="badge completed">Completed </span>
         </div>
 
         <div class="project-item">
           <a class="project-link" href="./06-unlimitedColors/index.html">Project 6 - Unlimited Colors 🧠</a>
-          <span class="badge pending">Pending </span>
+          <span class="badge completed">Completed </span>
         </div>
 
         <div class="project-item">
